include/epanet_2_1.h


int  DLLEXPORT ENepanet(const char *inpFile, const char *rptFile,
  const char *binOutFile, void (*callback) (char *));
int  DLLEXPORT ENopen(const char *inpFile, const char *rptFile, const char *binOutFile);
int  DLLEXPORT ENsaveinpfile(const char *filename);
int  DLLEXPORT ENclose();
int  DLLEXPORT ENsolveH();
int  DLLEXPORT ENsaveH();
int  DLLEXPORT ENopenH();
int  DLLEXPORT ENinitH(int initFlag);
int  DLLEXPORT ENrunH(long *currentTime);
int  DLLEXPORT ENnextH(long *tStep);
int  DLLEXPORT ENcloseH();
int  DLLEXPORT ENsavehydfile(char *filename);
int  DLLEXPORT ENusehydfile(char *filename);
int  DLLEXPORT ENsolveQ();
int  DLLEXPORT ENopenQ();
int  DLLEXPORT ENinitQ(int saveFlag);
int  DLLEXPORT ENrunQ(long *currentTime);
int  DLLEXPORT ENnextQ(long *tStep);
int  DLLEXPORT ENstepQ(long *timeLeft);
int  DLLEXPORT ENcloseQ();
int  DLLEXPORT ENwriteline(char *line);
int  DLLEXPORT ENreport();
int  DLLEXPORT ENresetreport();
int  DLLEXPORT ENsetreport(char *reportFormat);
int  DLLEXPORT ENgetcontrol(int controlIndex, int *controlType, int *linkIndex, EN_API_FLOAT_TYPE *setting, int *nodeIndex, EN_API_FLOAT_TYPE *level);
int  DLLEXPORT ENgetcount(int code, int *count);
int  DLLEXPORT ENgetoption(int code, EN_API_FLOAT_TYPE *value);
int  DLLEXPORT ENgettimeparam(int code, long *value);
int  DLLEXPORT ENgetflowunits(int *code);
int DLLEXPORT ENgetdemandmodel(int *type, EN_API_FLOAT_TYPE *pmin,
    EN_API_FLOAT_TYPE *preq, EN_API_FLOAT_TYPE *pexp);
int DLLEXPORT ENsetdemandmodel(int type, EN_API_FLOAT_TYPE pmin,
    EN_API_FLOAT_TYPE preq, EN_API_FLOAT_TYPE pexp);
int  DLLEXPORT ENgetpatternindex(char *id, int *index);
int  DLLEXPORT ENgetpatternid(int index, char *id);
int  DLLEXPORT ENgetpatternlen(int index, int *len);
int  DLLEXPORT ENgetpatternvalue(int index, int period, EN_API_FLOAT_TYPE *value);
int  DLLEXPORT ENgetaveragepatternvalue(int index, EN_API_FLOAT_TYPE *value);
int  DLLEXPORT ENgetqualtype(int *qualcode, int *tracenode);
int  DLLEXPORT ENgeterror(int errcode, char *errmsg, int maxLen);
int  DLLEXPORT ENgetstatistic(int code, EN_API_FLOAT_TYPE* value);
int  DLLEXPORT ENgetnodeindex(char *id, int *index);
int  DLLEXPORT ENgetnodeid(int index, char *id);
int  DLLEXPORT ENgetnodetype(int index, int *code);
int  DLLEXPORT ENgetnodevalue(int index, int code, EN_API_FLOAT_TYPE *value);
int  DLLEXPORT ENgetcoord(int index, EN_API_FLOAT_TYPE *x, EN_API_FLOAT_TYPE *y);
int  DLLEXPORT ENsetcoord(int index, EN_API_FLOAT_TYPE x, EN_API_FLOAT_TYPE y);
int  DLLEXPORT ENgetnumdemands(int nodeIndex, int *numDemands);
int  DLLEXPORT ENgetbasedemand(int nodeIndex, int demandIndex, EN_API_FLOAT_TYPE *baseDemand);
int  DLLEXPORT ENgetdemandpattern(int nodeIndex, int demandIndex, int *pattIndex);
int  DLLEXPORT ENgetlinkindex(char *id, int *index);
int  DLLEXPORT ENgetlinkid(int index, char *id);
int  DLLEXPORT ENgetlinktype(int index, int *code);
int  DLLEXPORT ENgetlinknodes(int index, int *node1, int *node2);
int  DLLEXPORT ENgetlinkvalue(int index, int code, EN_API_FLOAT_TYPE *value);
int  DLLEXPORT ENgetcurve(int curveIndex, char* id, int *nValues, EN_API_FLOAT_TYPE **xValues, EN_API_FLOAT_TYPE **yValues);
int  DLLEXPORT ENgetheadcurveindex(int pumpIndex, int *curveIndex);
int  DLLEXPORT ENgetpumptype(int linkIndex, int *outType);
int  DLLEXPORT ENgetcurvetype(int curveIndex, int *outType);
int  DLLEXPORT ENgetversion(int *version);
int DLLEXPORT ENsetdemandname(int nodeIndex, int demandIdx, char *demandName);
int DLLEXPORT ENgetdemandname(int nodeIndex, int demandIdx, char *demandName);